--- a/style/global.css
+++ b/style/global.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing:border-box;
+}
+
 :root{
     /* font */
     --font-family: 'Pippins', sans-serif;
@@ -23,4 +29,8 @@
     /* Zoom na pagina */
     /* zoom: 5; */
 
+}
+
+body{
+    overflow: hidden;
 }
