--- a/style/global.css
+++ b/style/global.css
@@ -33,4 +33,16 @@
 
 body{
     overflow: hidden;
+
+    font: var(--text);
+    color: var(--text-secundary);
+}
+
+h1, h2{
+    color: var(--text);
+}
+
+img{
+    max-width: 100%;
+    height: auto;
 }
