--- a/style/fields/index.css
+++ b/style/fields/index.css
@@ -61,3 +61,24 @@ select {
     background: url(../../assets/icons/arrow-down-01.svg) calc(100% - 1rem);
     background-repeat: no-repeat;
 }
+
+.address .flex{
+    gap: 1.25rem;
+
+}
+
+
+.input-wrapper:has([disabled]){
+
+    opacity: .5;
+     
+ }
+
+ input{
+    &[disabled]{
+        background-color: var(--surface-disabled);
+        border: 1px soloid var(--stroke-default);
+
+        color: var(--terx-primary);
+    }
+}
