Campos  de Informações  do responsáveis

--- a/style/fields/index.css
+++ b/style/fields/index.css
@@ -81,4 +81,35 @@ select {
 
         color: var(--terx-primary);
     }
+
+        /* Emquanto o campo estiver vasio  ele fica com a borda vermelha, so depois de preencher ele tira a borda vermelha */
+        &:invalid{
+            border: 0.125rem solid var(--semantic-error);
+        }
+
+        & + small{
+            font: var(--text-sm);
+            color: #78716C;
+    
+            display: inline-block;
+            margin-top: .25rem;
+        }
+
+        &[required] + .error{
+            display: flex; 
+            align-items: center;
+            gap: .25rem;
+        
+     
+            font: var(--text-sm);
+            color: var(--semantic-error);
+
+            margin-top: .25rem;
+         }
+
+         &:not(:focus):valid + .error{
+            display: none;
+        }
+
+
 }
