--- a/style/fields/droparea.css
+++ b/style/fields/droparea.css
@@ -26,18 +26,18 @@
     &:hover,
     &:has(input:focus) {
         border-width: 2px;
-        border-color: var(--stroke-hightlight);
+        border-color: var(--stroke-highlight);
         background-color: var(--surface-secondary);
         color: var(--text-secundary);
 
     }
 
-    & p{
+    & p {
         color: var(--text-tertiary);
     }
 
     & svg path {
-        stroke: var(--stroke-hightlight);
+        stroke: var(--stroke-highlight);
     }
 
 }
