--- a/style/fields/input.css
+++ b/style/fields/input.css
@@ -1,4 +1,3 @@
-
 input,
 textarea,
 select {
@@ -26,7 +25,7 @@ input[type="date"]:focus,
 textarea:focus,
 select:focus {
     outline: .25rem solid var(--surface-secondary);
-    border: .125rem solid var(--stroke-hightlight);
+    border: .125rem solid var(--stroke-highlight);
     outline-offset: 1px;
 }
 
@@ -61,54 +60,54 @@ select {
     background-repeat: no-repeat;
 }
 
-.address .flex{
+.address .flex {
     gap: 1.25rem;
 
 }
 
 
-.input-wrapper:has([disabled]){
+.input-wrapper:has([disabled]) {
 
     opacity: .5;
-     
- }
 
- input{
-    &[disabled]{
+}
+
+input {
+    &[disabled] {
         background-color: var(--surface-disabled);
         border: 1px soloid var(--stroke-default);
 
         color: var(--terx-primary);
     }
 
-        /* Emquanto o campo estiver vasio  ele fica com a borda vermelha, so depois de preencher ele tira a borda vermelha */
-        &:invalid{
-            border: 0.125rem solid var(--semantic-error);
-        }
+    /* Emquanto o campo estiver vasio  ele fica com a borda vermelha, so depois de preencher ele tira a borda vermelha */
+    &:invalid {
+        border: 0.125rem solid var(--semantic-error);
+    }
 
-        & + small{
-            font: var(--text-sm);
-            color: #78716C;
-    
-            display: inline-block;
-            margin-top: .25rem;
-        }
+    &+small {
+        font: var(--text-sm);
+        color: #78716C;
 
-        &[required] + .error{
-            display: flex; 
-            align-items: center;
-            gap: .25rem;
-        
-     
-            font: var(--text-sm);
-            color: var(--semantic-error);
+        display: inline-block;
+        margin-top: .25rem;
+    }
 
-            margin-top: .25rem;
-         }
+    &[required]+.error {
+        display: flex;
+        align-items: center;
+        gap: .25rem;
 
-         &:not(:focus):valid + .error{
-            display: none;
-        }
+
+        font: var(--text-sm);
+        color: var(--semantic-error);
+
+        margin-top: .25rem;
+    }
+
+    &:not(:focus):valid+.error {
+        display: none;
+    }
 
 
 }
