--- a/style/fields/radio.css
+++ b/style/fields/radio.css
@@ -1,15 +1,15 @@
-label + .radio-wrapper{
-    margin-top: .1rem ;
+label+.radio-wrapper {
+    margin-top: .1rem;
 }
 
-.radio-wrapper{
+.radio-wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(7.5rem, 1fr));
     gap: 1rem;
 
 }
 
-.radio-inner{
+.radio-inner {
 
     border: 1px solid var(--stroke-default);
     border-radius: .5rem;
@@ -20,39 +20,41 @@ label + .radio-wrapper{
     padding: 2rem .5rem .5rem;
 
     position: relative;
+
     & input,
     & input:focus,
-    & intput:hover{
-        all:unset;
+    & intput:hover {
+        all: unset;
 
         position: absolute;
         inset: 0;
 
     }
 
-    .radio-image{
+    .radio-image {
         background-image: url(../../assets/icons/radio-default.svg);
         background-repeat: no-repeat;
         width: 1.5rem;
-        height:1.5rem;
+        height: 1.5rem;
 
         position: absolute;
         top: .5rem;
         left: .5rem;
     }
 
-    &:hover, &:focus-within{
-        border: 1px solid var(--stroke-hightlight);
+    &:hover,
+    &:focus-within {
+        border: 1px solid var(--stroke-highlight);
 
-        & .radio-image{
+        & .radio-image {
             background-image: url(../../assets/icons/radio-hover.svg);
         }
     }
 
-    &:has(:checked){
-        border: solid 1px var(--stroke-hightlight);
-        
-        & .radio-image{
+    &:has(:checked) {
+        border: solid 1px var(--stroke-highlight);
+
+        & .radio-image {
             background-image: url(../../assets/icons/radio-cheked.svg);
         }
 
